objects/Feedback__c.object
<CustomObject>
    <description>Related object to Job Application for PM/APM feedback of summer staff</description>
    <fields>
        <fullName>Academic_year__c</fullName>
        <inlineHelpText>Survey question: d) if &apos;yes&apos;, what academic year are you in?

Academic year</inlineHelpText>
        <label>Academic year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st year</fullName>
                </value>
                <value>
                    <fullName>2nd year</fullName>
                </value>
                <value>
                    <fullName>3rd year</fullName>
                </value>
                <value>
                    <fullName>4th year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acting_as_a_Role_Model__c</fullName>
        <label>Professional and Role Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always acted as a positive role model</fullName>
                </value>
                <value>
                    <fullName>Usually acted as a positive role model</fullName>
                </value>
                <value>
                    <fullName>Sometimes acted as positive role model</fullName>
                </value>
                <value>
                    <fullName>Struggled to act as positive role model</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_feature_of_SAW__c</fullName>
        <inlineHelpText>Survey question: a) What is the best feature of the website?

Best feature of SAW</inlineHelpText>
        <label>Best feature of SAW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Timetables, programme information, contract now more easily accessible</fullName>
                </value>
                <value>
                    <fullName>Ability to change/amend information such as availability more easily</fullName>
                </value>
                <value>
                    <fullName>Ability to track the progress of your application</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_place_to_promote_Challenge__c</fullName>
        <inlineHelpText>Survey Question: What one place would you encourage us to use to promote The Challenge to find high quality summer staff? (cuts off at 1000 characters)</inlineHelpText>
        <label>Best place to promote Challenge</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_thing_about_the_programme__c</fullName>
        <inlineHelpText>Survey Question: What one thing did you like about the programme? (cuts off after 255 characters)</inlineHelpText>
        <label>Best thing about the programme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Best_way_to_engage_CM_with_YP__c</fullName>
        <label>Best way to engage CM with YP</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charity_partner_suitability__c</fullName>
        <label>Charity partner suitability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clarity_of_emails_from_Staffing__c</fullName>
        <inlineHelpText>Survey question: How would you rate the quality of emailed communications for your staffing representatives? (5 = execellent, 1 = poor)

Rating: Clarity of emails from Staffing</inlineHelpText>
        <label>Rating: Clarity of emails from Staffing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>IF( Job_Application__r.RecordTypeId = &quot;012C0000000QBBE&quot;,  Job_Application__r.Contact__r.Cluster__r.Name , Job_Application__r.Cluster_selected__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Frequency__c</fullName>
        <inlineHelpText>Survey question: How often did you communicate with your Staffing Associate?

Communication Frequency</inlineHelpText>
        <label>Communication Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very regularly, I had several different placements over the summer</fullName>
                </value>
                <value>
                    <fullName>Fairly regularly, part of the back-up staff for and given cover/ad hoc work</fullName>
                </value>
                <value>
                    <fullName>Fairly regularly, I have one placement and consulted my associate directly</fullName>
                </value>
                <value>
                    <fullName>Not very often, I mostly consulted the Staffing Website</fullName>
                </value>
                <value>
                    <fullName>Not very often, I was on the back-up list and was not contacted often</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Partner_Suitability__c</fullName>
        <inlineHelpText>Survey question: Did you feel that the community partners you visited were engaged and well suited to the skill you were teaching? (5 = definitely, 1 = poor)</inlineHelpText>
        <label>Community Partner Suitability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Job_Application__r.Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continue_This_Calendar_Year__c</fullName>
        <label>Continue This Calendar Year?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_feedback_submitted__c</fullName>
        <description>Date that clicktools form created Feedback</description>
        <label>Date feedback submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engaging_Young_People__c</fullName>
        <label>Engaging Young People</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always engaged with young people</fullName>
                </value>
                <value>
                    <fullName>Usually engaged with young people</fullName>
                </value>
                <value>
                    <fullName>Sometimes engaged with young people</fullName>
                </value>
                <value>
                    <fullName>Rarely engaged with young people</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facilitation_of_Groups__c</fullName>
        <label>Facilitation of Groups</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent sessions with good planning</fullName>
                </value>
                <value>
                    <fullName>Good sessions and engaging</fullName>
                </value>
                <value>
                    <fullName>Can improve delivery of session/planning</fullName>
                </value>
                <value>
                    <fullName>Poor delivery and planning of sessions</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favourite_aspects_of_role__c</fullName>
        <inlineHelpText>Survey question: Which aspects of the role did you most enjoy?

Favourite aspects of role</inlineHelpText>
        <label>Favourite aspects of role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_details__c</fullName>
        <description>details and comments from APM on summer staff performance</description>
        <label>Feedback details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_rating__c</fullName>
        <description>Rating of feedback given by APM</description>
        <label>Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_summary__c</fullName>
        <description>For APM to assess summer staff</description>
        <label>Feedback summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not invite back for any role</fullName>
                </value>
                <value>
                    <fullName>Do not rehire in any capacity next year</fullName>
                </value>
                <value>
                    <fullName>Invite for assessment for lower role next year</fullName>
                </value>
                <value>
                    <fullName>Invite for assessment for same role next year</fullName>
                </value>
                <value>
                    <fullName>Invite to assessment for higher role next year</fullName>
                </value>
                <value>
                    <fullName>Invite to assessment for Team Mentor</fullName>
                </value>
                <value>
                    <fullName>Offer Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Offer lower role next year</fullName>
                </value>
                <value>
                    <fullName>Offer same role next year</fullName>
                </value>
                <value>
                    <fullName>Offer Senior Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Potential TCS Mentor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_groups_summer_staff__c</fullName>
        <label>Focus groups summer staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_order_support__c</fullName>
        <label>Food order support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Happy_to_promote_TCN_roles__c</fullName>
        <inlineHelpText>Survey question: Would you be happy to help us promote NCS with The Challenge?

Happy to promote TCN roles</inlineHelpText>
        <label>Happy to promote TCN roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, and I am happy to be contacted about this</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <inlineHelpText>Survey question: a) How did you hear about NCS with The Challenge?

How did you hear about us?</inlineHelpText>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Careers fair</fullName>
                </value>
                <value>
                    <fullName>Through college/university/work</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Friends and family</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us_other__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;other&apos; please specify

How did you hear about us &apos;other&apos;</inlineHelpText>
        <label>How did you hear about us &apos;other&apos;</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_days_did_they_attend__c</fullName>
        <label>No of attendances</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inclusiveness_Sympathetic_to_all_YP__c</fullName>
        <label>Inclusiveness (Sympathetic to all YP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always sympathetic to needs of the team</fullName>
                </value>
                <value>
                    <fullName>Usually sympathetic to needs of the team</fullName>
                </value>
                <value>
                    <fullName>Sometimes sympathetic to needs of team</fullName>
                </value>
                <value>
                    <fullName>Rarely sympathetic to needs of the team</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_in_Alumni__c</fullName>
        <inlineHelpText>Survey question: Would you be interested in being part of the Alumni (network of summer staff who are kept in contact with NCS with The Challenge, invited to NCS events and given paid and voluntary opportunities)?

Interest in alumni</inlineHelpText>
        <label>Interest in Alumni</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_summer_staff_role_next_yea__c</fullName>
        <inlineHelpText>Survey Question: If available, would you like to be considered to take part as a seasonal staff member for our Autumn, Spring and Summer 2015 programmes? (Please select all that apply)

Consider for next year</inlineHelpText>
        <label>Consider for next year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Autumn (Oct/Nov)</fullName>
                </value>
                <value>
                    <fullName>Yes, Spring (Feb/March)</fullName>
                </value>
                <value>
                    <fullName>Yes, Summer (June/Oct)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Application_ID__c</fullName>
        <formula>Job_Application__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_desc_compared_to_role__c</fullName>
        <inlineHelpText>Survey question: Do you think the job description for your role was accurate compared to your role in the summer?

Job desc. compared to role</inlineHelpText>
        <label>Job desc. compared to role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job placement</label>
        <referenceTo>Job_placement__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Least_enjoyed_aspects__c</fullName>
        <inlineHelpText>Survey Question: Which aspects of the role did you least enjoy? (max 1000 characters)</inlineHelpText>
        <label>Least enjoyed aspects</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Least_favourite_aspects_of_role__c</fullName>
        <inlineHelpText>Survey question: Which aspects of the role did you least enjoy? 

Least favourite aspects of role</inlineHelpText>
        <label>Least favourite aspects of role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Least_relevant_part_of_assessment__c</fullName>
        <label>Least relevant part of assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staffing structure</fullName>
                </value>
                <value>
                    <fullName>Content of programme</fullName>
                </value>
                <value>
                    <fullName>Safeguarding</fullName>
                </value>
                <value>
                    <fullName>Role-specific training</fullName>
                </value>
                <value>
                    <fullName>Managing challenging behaviour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_training_appropriate__c</fullName>
        <inlineHelpText>Survey question: Was the length of your training appropriate?

Length of training appropriate?</inlineHelpText>
        <label>Length of training appropriate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good length and a good amount of information was covered each day</fullName>
                </value>
                <value>
                    <fullName>Too short and too much information was covered over too few days</fullName>
                </value>
                <value>
                    <fullName>Too long and there was not enough information to cover each day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likely_to_promote_summer_roles_to_friend__c</fullName>
        <inlineHelpText>Survey question: Are you likely to promote seasonal staff opportunities to friends, family and colleagues?

Likely to promote summer roles to friend</inlineHelpText>
        <label>Likely to promote summer role to friend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make_the_curriculum_better__c</fullName>
        <inlineHelpText>Survey question: b) What would improve the curriculum?

Text, question only visible if answer to previous Q = 3 or less!</inlineHelpText>
        <label>Make the curriculum better</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Management_before_programme__c</fullName>
        <inlineHelpText>Survey question: a) Before starting the programme, who did you think would provide your management?</inlineHelpText>
        <label>Management before programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Programme Manager</fullName>
                </value>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management_on_programme__c</fullName>
        <inlineHelpText>Survey question: a) On reflection, who do you think actually provided your management?</inlineHelpText>
        <label>Management on programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Programme Manager</fullName>
                </value>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managing_Challenging_Behaviour__c</fullName>
        <label>Managing Challenging Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always dealt with challenging behaviour</fullName>
                </value>
                <value>
                    <fullName>Usually dealt with challenging behaviour</fullName>
                </value>
                <value>
                    <fullName>Often needed input and help from others</fullName>
                </value>
                <value>
                    <fullName>Unable to manage challenging behaviour</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managing_Staff__c</fullName>
        <label>Managing Staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very effective management of staff</fullName>
                </value>
                <value>
                    <fullName>Good management of staff</fullName>
                </value>
                <value>
                    <fullName>Average management of staff</fullName>
                </value>
                <value>
                    <fullName>Poor management of staff</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentor_Training_Relevance__c</fullName>
        <inlineHelpText>Survey question: Which part of the mentor training day was most relevant to the role you performed? (Please select all that apply)</inlineHelpText>
        <label>Mentor Training Relevance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staffing structure</fullName>
                </value>
                <value>
                    <fullName>Content of programme</fullName>
                </value>
                <value>
                    <fullName>Safeguarding</fullName>
                </value>
                <value>
                    <fullName>Managing challenging behaviour</fullName>
                </value>
                <value>
                    <fullName>Role-specific training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_YP_information__c</fullName>
        <inlineHelpText>Survey question: Was there any information you didn&apos;t receive that would have helped you with your role?</inlineHelpText>
        <label>Missing YP information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Most_enjoyed_aspects__c</fullName>
        <inlineHelpText>Survey Question: Which aspects of the role did you most enjoy? (max 1000 characters)</inlineHelpText>
        <label>Most enjoyed aspects</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment_CF__c</fullName>
        <inlineHelpText>Most relevant part of assessment - CF</inlineHelpText>
        <label>Most relevant part of assessment - CF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Icebreakers</fullName>
                </value>
                <value>
                    <fullName>Role plays</fullName>
                </value>
                <value>
                    <fullName>Session planning</fullName>
                </value>
                <value>
                    <fullName>Resilience exercise</fullName>
                </value>
                <value>
                    <fullName>Teach Us Something</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment_LO__c</fullName>
        <inlineHelpText>Most relevant part of assessment - LO</inlineHelpText>
        <label>Most relevant part of assessment - LO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group motivational skills</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Problem solving</fullName>
                </value>
                <value>
                    <fullName>Role play</fullName>
                </value>
                <value>
                    <fullName>Session planning</fullName>
                </value>
                <value>
                    <fullName>Teach Us Something</fullName>
                </value>
                <value>
                    <fullName>Written exercise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>